--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/images/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
+    <title>Ramdan & Nurul Wedding</title>
   </head>
-  <body>
-    <div id="app"></div>
+  <body class="bg-[#fefaee]">
+    <div id="app" class=""></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
