--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/images/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ramdan & Nurul Wedding</title>
+    <title>Ghani & Wiwit Wedding</title>
   </head>
   <body class="bg-[#fefaee]">
     <div id="app" class=""></div>
